feat: Atualizar seção "Sobre" com informações e links sociais, além de melhorias no estilo

--- a/Joaz_portfolio.html
+++ b/Joaz_portfolio.html
@@ -79,21 +79,24 @@
         <i class="fas fa-chevron-down" id="chevron-down"></i>
     </div>
     </section>
+
     <section class="about" id="about">
-      <div class="about_all">
-        <h1>Quem nos somos</h1>
+
+      <div class="about_persons">
+        <h1>Quem somos</h1>
         <div class="about_articles">
+
           <article class="article_about_joaz" id="article_joaz">
             <div class="about_content_joaz">
               <img src="" alt="">
               <p>
                 breve descrição.... 
               </p>
-            </div>
-            <div class="about_socials">
-              <a href="#" class="about_social_link"><i class="fab fa-github"></i></a>
-              <a href="#" class="about_social_link"><i class="fab fa-linkedin"></i></a>
-              <a href="#" class="about_social_link"><i class="fab fa-instagram"></i></a>
+              <div class="about_socials">
+                <a href="https://github.com/joaz0" class="about_social_link"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/joaz-rodrigues/" class="about_social_link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/rodrigues_joaz/" class="about_social_link"><i class="fab fa-instagram"></i></a>
+              </div>
             </div>
           </article>
 
@@ -104,15 +107,39 @@
                 breve descrição....
               </p>
               <div class="about_socials">
-                <a href="#" class="about_social_link"><i class="fab fa-github"></i></a>
-                <a href="#" class="about_social_link"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="about_social_link"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/Ig0r-or" class="about_social_link"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/igor-gabriel-silva-prado/" class="about_social_link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/ig0r_or/" class="about_social_link"><i class="fab fa-instagram"></i></a>
               </div>
             </div>
           </article>
         </div>
       </div>
+        <div class="about_emphasis">
+          <div class="mission">
+            <h2>Nossa missão</h2>
+            <p>
+              Nossa missão é transformar ideias em soluções digitais inovadoras, proporcionando experiências excepcionais aos usuários e impulsionando o sucesso dos nossos clientes através da tecnologia.
+            </p>
+          </div>
+          <div>
+            <h2>Nossa visão</h2>
+            <p>
+              Ser reconhecidos como líderes em desenvolvimento web e mobile, entregando soluções tecnológicas que antecipam as necessidades do mercado e promovem a transformação digital.
+            </p>
+          </div>
 
+          <div>
+            <h2>Nossos valores</h2>
+            <ul class="values-line">
+              <li>Inovação: Estamos sempre buscando novas ideias e tecnologias para oferecer soluções criativas e eficazes.</li>
+              <li>Qualidade: Comprometemo-nos a entregar produtos e serviços de alta qualidade que atendam às expectativas dos nossos clientes.</li>
+              <li>Colaboração: Valorizamos o trabalho em equipe e a comunicação aberta, acreditando que juntos somos mais fortes.</li>
+              <li>Transparência: Mantemos uma comunicação clara e honesta com nossos clientes, construindo confiança e parcerias duradouras.</li>
+              <li>Foco no cliente: Colocamos as necessidades dos nossos clientes em primeiro lugar, garantindo sua satisfação e sucesso.</li>
+            </ul>
+          </div>
+        </div>
     </section>
   </main>
 
