feat: Implement WhatsApp scheduling for calls and consultations
- Added scheduleCall method in contact component to open WhatsApp with a pre-filled message for scheduling calls.
- Integrated scheduleConsultation method in home component for booking free consultations via WhatsApp.
- Enhanced process component with detailed step descriptions and a new openStepDetails method to share step information via WhatsApp.
- Updated project component to initiate project discussions through WhatsApp.
- Improved services component with detailed service offerings and requestQuote method for budget inquiries via WhatsApp.
- Updated HTML templates to include new button functionalities for scheduling and requesting quotes.
- Enhanced styles for process metrics and service CTA benefits for better UI presentation.
- Configured GitHub Actions for automated deployment to GitHub Pages.
- Added custom 404 page for better user experience on GitHub Pages.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Digital Labs - Soluções em Desenvolvimento</title>
-  <base href="/">
+  <base href="/Site_portfolio/">
+  <script>
+    (function(l) {
+      if (l.search[1] === '/' ) {
+        var decoded = l.search.slice(1).split('&').map(function(s) { 
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Digital Labs - Especialistas em desenvolvimento web, mobile e desktop. Criamos soluções digitais inovadoras para sua empresa.">
   <meta name="keywords" content="desenvolvimento web, aplicativos mobile, sistemas desktop, Angular, React, Node.js">
