Add business improvements: testimonials, FAQ, WhatsApp float, SEO

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,31 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Digital Labs - Especialistas em desenvolvimento web, mobile e desktop. Criamos soluções digitais inovadoras para sua empresa.">
-  <meta name="keywords" content="desenvolvimento web, aplicativos mobile, sistemas desktop, Angular, React, Node.js">
+  <meta name="keywords" content="desenvolvimento web, aplicativos mobile, sistemas desktop, Angular, React, Node.js, Pouso Alegre, MG">
   <meta name="author" content="Digital Labs">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://joaz0.github.io/Site_portfolio/">
+  <meta property="og:title" content="Digital Labs - Soluções em Desenvolvimento">
+  <meta property="og:description" content="Especialistas em desenvolvimento web, mobile e desktop. Transformamos suas ideias em soluções digitais.">
+  <meta property="og:image" content="https://joaz0.github.io/Site_portfolio/assets/images/og-image.jpg">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://joaz0.github.io/Site_portfolio/">
+  <meta property="twitter:title" content="Digital Labs - Soluções em Desenvolvimento">
+  <meta property="twitter:description" content="Especialistas em desenvolvimento web, mobile e desktop. Transformamos suas ideias em soluções digitais.">
+  <meta property="twitter:image" content="https://joaz0.github.io/Site_portfolio/assets/images/og-image.jpg">
+  
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
